Lavet View til OpretStudent knappen på forside sender dig til Opretstudent

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div> 
-        <input type="button" value="Tryk" />
+        <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
     </div>
 </body>
 </html>
