Ændring af OpretStudent

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -22,5 +22,11 @@
 
         <input type="text" id="Semester" name="Semester" placeholder="Semester" />
     </div>
+    <div>
+        <input type="button" id="Opret" value="Opret" />
+    </div>
+    <div>
+        @Html.TextArea("prøve")
+    </div>
 </body>
 </html>
