Har tilføjet knapper til forside og lavet ændring i studentliste

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -15,5 +15,24 @@
         <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
         <input type="button" class="button" value="Student Liste" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
     </div>
+
+    <div>
+        <input type="button" class="button" value="Opret Virksomhed" />
+        <input type="button" class="button" value="Virksomheds Liste" />
+    </div>
+
+    <div>
+        <input type="button" class="button" value="Opret Tilføjer" />
+        <input type="button" class="button" value="Tilføjer Liste" />
+    </div>
+
+    <div>
+        <input type="button" class="button" value="Opret Bruger" />
+        <input type="button" class="button" value="Bruger Liste" />
+    </div>
+
+    <div>
+        <input type="button" class="button" value="Udløbet Studenter" />
+    </div>
 </body>
 </html>
