--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -27,18 +27,44 @@
     <table class="table">
         <tr>
             <th>Navn</th>
-            <th>Alder</th>
+            <th>Addresse</th>
+            <th>Bopæl</th>
+            <th>Nationalitet</th>
+            <th>Sprog Kundskab</th>
+            <th>Tele</th>
+            <th>Mail</th>
             <th>Uddannelse</th>
+            <th>Periode</th>
             <th>Semester</th>
             <th>Specialisering</th>
+            <th>Overbygning</th>
+            <th>Semester Projekt</th>
+            <th>Praktik</th>
+            <th>Hovedopgave</th>
+            <th>Opgave Type</th>
+            <th>Studie Job</th>
+            <th>Transport</th>
         </tr>
 
         <tr>
             <td>Tom Hansen</td>
-            <td>20</td>
-            <td>Tømrer</td>
-            <td>4.semester</td>
-            <td>Renovering</td>
+            <td>Kongevej 23</td>
+            <td>Rindkøbing</td>
+            <td>Dansk</td>
+            <td>Dansk og Engelsk</td>
+            <td>30592749</td>
+            <td>Tom5839@gmail.com</td>
+            <td>Elektrikker</td>
+            <td>13.august 2017 - 25.januar 2020</td>
+            <td>4.semester jan-jun</td>
+            <td>Energi</td>
+            <td>Ingen</td>
+            <td>Ingen</td>
+            <td>Ingen</td>
+            <td>Ingen</td>
+            <td>Energi</td>
+            <td>Nej</td>
+            <td>Ja</td>
 
             <td>@Html.ActionLink("Rediger", "RedigerStudent", "Home", null, new { @class = "btn btn-primary"})</td>
             <td>
