--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -17,8 +17,8 @@
     </div>
 
     <div>
-        <input type="button" class="button" value="Opret Virksomhed" />
-        <input type="button" class="button" value="Virksomheds Liste" />
+        <input type="button" class="button" value="Opret Virksomhed" onclick="location.href='@Url.Action("OpretVirksomhed", "Home")'" />
+        <input type="button" class="button" value="Virksomheds Liste" onclick="location.href='@Url.Action("VirksomhedListe", "Home")'"/>
     </div>
 
     <div>
