--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretBruger.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretBruger.cshtml
@@ -13,19 +13,19 @@
 </head>
 <body>
     <div> 
-        <input type="text" placeholder="Brugernavn" id="Brugernavn" name="Brugernavn" />
+        <input type="text" id="Brugernavn" name="Brugernavn" placeholder="Brugernavn" />
     </div>
 
     <div>
-        <input type="text" placeholder="Password" id="Password" name="Password" />
+        <input type="text" id="Password" name="Password" placeholder="Password" />
     </div>
 
     <div>
-        <input type="text" placeholder="Bruger type" id="Brugertype" name="Brugertype" />
+        <input type="text" id="Brugertype" name="Brugertype" placeholder="Bruger type" />
     </div>
 
     <div>
-        <input type="submit" id="Nybruger" value="Opret Bruger" />
+        <input type="submit" id="Opretbruger" value="Opret Bruger" />
     </div>
 </body>
 </html>
