Kan nu gå til flere views fra forside

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -22,13 +22,13 @@
     </div>
 
     <div>
-        <input type="button" class="button" value="Opret Tilføjer" />
-        <input type="button" class="button" value="Tilføjer Liste" />
+        <input type="button" class="button" value="Opret Tilføjer" onclick="location.href='@Url.Action("OpretTilføjer", "Home")'" />
+        <input type="button" class="button" value="Tilføjer Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
     </div>
 
     <div>
-        <input type="button" class="button" value="Opret Bruger" />
-        <input type="button" class="button" value="Bruger Liste" />
+        <input type="button" class="button" value="Opret Bruger" onclick="location.href='@Url.Action("OpretBruger", "Home")'" />
+        <input type="button" class="button" value="Bruger Liste" onclick="location.href='@Url.Action("BrugerListe", "Home")'" />
     </div>
 
     <div>
