Lavet redigerStudent og RedigerTilføjer

--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
@@ -11,7 +11,22 @@
     <title>RedigerStudent</title>
 </head>
 <body>
-    <div> 
+    <div>
+
+        <input type="text" id="Navn" name="Navn" placeholder="Navn" />
+    </div>
+    <div>
+        <input type="text" id="Uddanelse" name="Uddanelse" placeholder="Uddanelse" />
+    </div>
+    <div>
+
+        <input type="text" id="Semester" name="Semester" placeholder="Semester" />
+    </div>
+    <div>
+        <input type="button" id="Rediger" value="Rediger" />
+    </div>
+    <div>
+        @Html.TextArea("prøve2")
     </div>
 </body>
 </html>
