Har tilføjet indhold til Rediger Virksomhed og Bruger

--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerBruger.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerBruger.cshtml
@@ -9,9 +9,23 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>RedigerBruger</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
-    <div> 
+    <div>
+        <input type="text" id="Brugernavn" name="Brugernavn" placeholder="Brugernavn" />
+    </div>
+
+    <div>
+        <input type="text" id="Password" name="Password" placeholder="Password" />
+    </div>
+
+    <div>
+        <input type="text" id="Brugertype" name="Brugertype" placeholder="Bruger type" />
+    </div>
+
+    <div>
+        <input type="submit" id="Redigerbruger" value="Rediger Bruger" />
     </div>
 </body>
 </html>
