--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -9,18 +9,17 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Forside</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
     <style>
-        input[type=button]{
-            cursor:pointer;
-            font-size:medium;
-            background-color:#000000;
-            color:white;
-            text-align:center;
-            width:200px;
-            height:50px;
-           
+        input[type=button] {
+            cursor: pointer;
+            font-size: medium;
+            background-color: #000000;
+            color: white;
+            text-align: center;
+            width: 200px;
+            height: 50px;
         }
-
     </style>
 </head>
 <body>
