--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -8,6 +8,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>OpretStudent</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
     <div>
