--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretVirksomhed.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretVirksomhed.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>OpretVirksomhed</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
     <div>
