Tilføjet manglende info i listen

--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -44,6 +44,7 @@
             <th>Opgave Type</th>
             <th>Studie Job</th>
             <th>Transport</th>
+            <th>Dato for Oprettelse</th>
         </tr>
 
         <tr>
@@ -65,6 +66,7 @@
             <td>Energi</td>
             <td>Nej</td>
             <td>Ja</td>
+            <td>15-09-2018</td>
 
             <td>@Html.ActionLink("Rediger", "RedigerStudent", "Home", null, new { @class = "btn btn-primary"})</td>
             <td>
