--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Hovedopgave1.Models.Virksomhed>
 @{
     Layout = null;
 }
@@ -25,32 +25,36 @@
     </div>
     <table class="table">
         <tr>
-            <th>Navn</th>
-            <th>KontaktPerson</th>
-            <th>Telefon.nr</th>
-            <th>E-mail</th>
-            <th>Virksomhed Info</th>
-            <th>Mulige Opgaver</th>
-            <th>Profiler</th>
-            <th>OpgaveLøsning</th>
-            <th>StyrkePosition</th>            
+            <th>@Html.DisplayNameFor(model => model.Navn)</th>
+            <th>@Html.DisplayNameFor(model => model.KontaktPerson)</th>
+            <th>@Html.DisplayNameFor(model => model.Telefon)</th>
+            <th>@Html.DisplayNameFor(model => model.Mail)</th>
+            <th>@Html.DisplayNameFor(model => model.VirksomhedsInfo)</th>
+            <th>@Html.DisplayNameFor(model => model.MuligeOpgaver)</th>
+            <th>@Html.DisplayNameFor(model => model.Profiler)</th>
+            <th>@Html.DisplayNameFor(model => model.OpgaveLøsning)</th>
+            <th>@Html.DisplayNameFor(model => model.Styrkeposition)</th>
         </tr>
-        <tr>
-            <td>Bright Eagle</td>
-            <td>John Johnson</td>
-            <td>45-xx-xx-xx</td>
-            <td>Hello@mail.dk</td>
-            <td>El-firma</td>
-            <td>Webudvikling</td>
-            <td>N/A</td>
-            <td>Semester Projekt</td>
-            <td>Fødevare</td>
+        @foreach (var s in Model)
+        {
 
-            <td>@Html.ActionLink("Rediger", "RedigerStudent", "Home", null, new { @class = "btn btn-primary" })</td>
-            <td><input type="submit" class="btn btn-primary" value="Slet" /></td>
 
-        </tr>
+            <tr>
+                <td>@Html.DisplayFor(models => s.Navn)</td>
+                <td>@Html.DisplayFor(models => s.KontaktPerson)</td>
+                <td>@Html.DisplayFor(models => s.Telefon)</td>
+                <td>@Html.DisplayFor(models => s.Mail)</td>
+                <td>@Html.DisplayFor(models => s.VirksomhedsInfo)</td>
+                <td>@Html.DisplayFor(models => s.MuligeOpgaver)</td>
+                <td>@Html.DisplayFor(models => s.Profiler)</td>
+                <td>@Html.DisplayFor(models => s.OpgaveLøsning)</td>
+                <td>@Html.DisplayFor(models => s.Styrkeposition)</td>
 
+                <td>@Html.ActionLink("Rediger", "RedigerStudent", "Home", null, new { @class = "btn btn-primary" })</td>
+                <td><input type="submit" class="btn btn-primary" value="Slet" /></td>
+
+            </tr>
+        }
 
 
     </table>
