--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerListe.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Hovedopgave1.Models.Bruger>
 @{
     Layout = null;
 }
@@ -14,23 +14,24 @@
 <body>
    <table class="table">
        <tr>
-           <th>Brugernavn</th>
-           <th>Password</th>
-           <th>Bruger type</th>
+           <th>@Html.DisplayNameFor(model => model.Brugernavn)</th>
+           <th>@Html.DisplayNameFor(model => model.Password)</th>
+           <th>@Html.DisplayNameFor(model => model.Rettighed)</th>
 
        </tr>
-
+       @foreach (var s in Model)
+       {
        <tr>
-           <td>Karina Winkler</td>
-           <td>kw395827</td>
-           <td>Admin</td>
+           <td>@Html.DisplayFor(models => s.Brugernavn)</td>
+           <td>@Html.DisplayFor(models => s.Password)</td>
+           <td>@Html.DisplayFor(models => s.Rettighed)</td>
 
-           <td>@Html.ActionLink("Rediger", "RedigerBruger", "Home", null, new { @class="btn btn-primary" })</td>
+           <td>@Html.ActionLink("Rediger", "RedigerBruger", "Home", null, new { @class = "btn btn-primary" })</td>
            <td>
                <input type="submit" id="Sletbruger" class="btn btn-primary" value="Slet" />
            </td>
        </tr>
-
+       }
    </table>
 
 </body>
