Checkboxen virker nu

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -72,8 +72,8 @@
     <br />
     <div>
         Har du egen transport(bil)*
-        <input type="checkbox" name="Transport" value="1"> ja
-        <input type="checkbox" name="Transport" value="0"> nej<br>
+        @Html.EditorFor(x => x.Transport) Klik på checkboxen hvis ja
+
     </div>
     <br />
     <div>
