--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -73,9 +73,14 @@
 
             <td>@Html.ActionLink("Rediger", "RedigerStudent", "Home", null, new { @class = "btn btn-primary" })</td>
             <td>
-                @Html.Hidden("Id", item.Id)
-                <input type="submit" class="btn btn-primary" value="Slet" />
+                @using (Html.BeginForm("StudentListe", "Home"))
+                {
+                    @Html.Hidden("Id", item.Id)
+
+                    <input type="submit" class="btn btn-primary" value="Slet" />
+                }
             </td>
+
         </tr>
         }
     </table>
